<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNotificationTitle"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/default_title"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvNotificationNote"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNotificationTitle"
        android:layout_marginTop="@dimen/tiny_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/default_note"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnNotificationCheckDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNotificationNote"
        android:layout_alignParentEnd="true"
        android:background="@color/transparent"
        android:text="@string/action_check_done"
        android:textColor="@color/red" />
</RelativeLayout>