<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.Material3.Dark.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/medium_margin">

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_new_group"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDialogTitle"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/large_margin"
        android:hint="@string/new_group_name"
        app:counterEnabled="true"
        app:counterMaxLength="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ThemeOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/extreme_large_margin3"
            android:text="@string/btn_cancel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOK"
            style="@style/ThemeOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extreme_large_margin3"
            android:text="@string/btn_OK"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>