<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.todo.fragments.todo.TodoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        app:navigationIcon="@drawable/ic_back" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolBar"
                android:layout_marginStart="@dimen/small_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/default_time_null"
                app:chipIcon="@drawable/ic_alarm_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolBar"
                android:layout_toEndOf="@+id/chipTime"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/default_group_name_null"
                app:chipIcon="@drawable/ic_folder" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutTodoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTitle"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/default_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:backgroundTint="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/default_size" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>