<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Material3.Dark.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:paddingBottom="@dimen/large_margin">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@color/red"
        android:paddingVertical="@dimen/large_margin">

        <ImageView
            android:id="@+id/viewAnim"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_warning"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/large_margin"
        android:text="@string/create_new_group"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDialogTitle"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/extreme_large_margin3"
            android:backgroundTint="@color/red"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOK"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extreme_large_margin3"
            android:backgroundTint="@color/background_main"
            android:text="@string/btn_OK"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />
    </LinearLayout>
</RelativeLayout>